# catkin_ws

./: .gitignore  test.yaml
src/dh_robotics_ag95_description/: urdf.rviz
src/dh_robotics_ag95_description/launch/: display.launch
src/dh_robotics_ag95_description/urdf/: dh_robotics_ag95_gripper.xacro
src/ft_sensor/: CMakeLists.txt  package.xml
src/ft_sensor/meshes/: ft_sensor.STL
src/ft_sensor/urdf/: ft_sensor.xacro
src/ft_sensor/urdf/sensor/: ft_sensor_config.xacro
src/inspire_hand/: CMakeLists.txt
src/inspire_hand/include/: hand_control.h
src/inspire_hand/launch/: hand_control.launch
src/inspire_hand/src/: hand_control.cpp  hand_control_client.cpp  hand_control_lib.cpp
src/inspire_hand/srv/: set_run_action.srv
src/inspire_hand_description/: CMakeLists.txt  package.xml
src/inspire_hand_description/launch/: display.launch  gazebo.launch
src/inspire_hand_description/urdf/: inspire_hand.urdf  inspire_hand.xacro  因时原版_很垃圾_做参考urdf-five3.urdf
src/rokae_description/urdf/: xMateSR4.xacro
src/rokae_with_ins_platform/platform_planning/: CMakeLists.txt  package.xml
src/rokae_with_ins_platform/platform_planning/launch/: demo_gazebo.launch
src/rokae_with_ins_platform/platform_planning/script/: test.py  (+6 more)
src/rokae_with_ins_platform/rokae_moveit_config/: .setup_assistant  package.xml
src/rokae_with_ins_platform/rokae_with_ins_description/: CMakeLists.txt  package.xml
src/rokae_with_robotics_platform/rokae_robotics_planning/: CMakeLists.txt  package.xml
src/rokae_with_robotics_platform/rokae_with_robotics_description/: CMakeLists.txt  package.xml
(+33 files in other folders)
